--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <h3>Contact Us</h3>
                     <p><i class="fas fa-map-marker-alt"></i> Address: 1107 MEMORIAL AVE WEST SPRINGFIELD</p>
                     <p><i class="fas fa-phone"></i> Phone: +13692002197</p>
-                    <p><i class="fas fa-envelope"></i> Email:  admin@ooobp.com</p>
+                    <p><i class="fas fa-envelope"></i> Email:  admin@poatransport8.ddns-ip.net</p>
                 </div>
             </div>
             <div class="footer-bottom">
