--- a/cart.html
+++ b/cart.html
@@ -87,9 +87,10 @@
                 </div>
                 <div class="footer-section contact">
                     <h3>Contact Us</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> Address: 12 ARCHDALE RD MA</p>
-                    <p><i class="fas fa-phone"></i> Phone: +13692083318</p>
-                    <p><i class="fas fa-envelope"></i> Email: admin@ooobp.com</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Address:1107 MEMORIAL AVE WEST SPRINGFIELD
+</p>
+                    <p><i class="fas fa-phone"></i> Phone: +13692002197</p>
+                    <p><i class="fas fa-envelope"></i> Email:admin@poatransport8.ddns-ip.net</p>
                 </div>
             </div>
             <div class="footer-bottom">
