--- a/privacy.html
+++ b/privacy.html
@@ -159,9 +159,11 @@
                 </div>
                 <div class="footer-section contact">
                     <h3>Contact Us</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> Address: Shanghai Pudong New District, Zhang Jiang Hi-Tech Park</p>
-                    <p><i class="fas fa-phone"></i> Phone: +86 123 4567 8910</p>
-                    <p><i class="fas fa-envelope"></i> Email: contact@globalshopping.com</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Address: 1107 MEMORIAL AVE WEST SPRINGFIELD</p>
+                    <p><i class="fas fa-phone"></i> Phone: +13692002197</p>
+                    <p><i class="fas fa-envelope"></i> Email:  admin@poatransport8.ddns-ip.net
+
+</p>
                 </div>
             </div>
             <div class="footer-bottom">
