--- a/faq.html
+++ b/faq.html
@@ -155,8 +155,8 @@
                         <h3>How can I contact customer service?</h3>
                         <p>You can reach our customer service team through the following channels:</p>
                         <ul>
-                            <li>Email: support@globalshopping.com</li>
-                            <li>Phone: +86 123 4567 8910 (available Monday-Friday, 9am-6pm China Standard Time)</li>
+                            <li>Email:  admin@poatransport8.ddns-ip.net</li>
+                            <li>Phone: +13692002197 (available Monday-Friday, 9am-6pm China Standard Time)</li>
                             <li>Live Chat: Available on our website during business hours</li>
                         </ul>
                     </div>
