--- a/shipping.html
+++ b/shipping.html
@@ -128,9 +128,9 @@
                 
                 <p>If you have any questions about our Shipping Policy, please contact us at:</p>
                 
-                <p>Email: shipping@globalshopping.com<br>
-                Address: Shanghai Pudong New District, Zhang Jiang Hi-Tech Park<br>
-                Phone: +86 123 4567 8910</p>
+                <p>Email:admin@poatransport8.ddns-ip.net<br>
+                Address: 1107 MEMORIAL AVE WEST SPRINGFIELD<br>
+                Phone: +13692002197</p>
             </div>
         </div>
     </section>
