--- a/privacy.html
+++ b/privacy.html
@@ -119,9 +119,9 @@
                 
                 <p>If you have any questions about this Privacy Policy, please contact us at:</p>
                 
-                <p>Email: privacy@globalshopping.com<br>
-                Address: Shanghai Pudong New District, Zhang Jiang Hi-Tech Park<br>
-                Phone: +86 123 4567 8910</p>
+                <p>Email: admin@poatransport8.ddns-ip.ne <br>
+                Address: 1107 MEMORIAL AVE WEST SPRINGFIELD<br>
+                Phone: +13692002197</p>
             </div>
         </div>
     </section>
