--- a/terms.html
+++ b/terms.html
@@ -102,9 +102,9 @@
                 
                 <p>If you have any questions about these Terms, please contact us at:</p>
                 
-                <p>Email: terms@globalshopping.com<br>
-                Address: Shanghai Pudong New District, Zhang Jiang Hi-Tech Park<br>
-                Phone: +86 123 4567 8910</p>
+                <p>Email: admin@poatransport8.ddns-ip.ne<br>
+                Address:1107 MEMORIAL AVE WEST SPRINGFIELD <br>
+                Phone: +13692002197</p>
             </div>
         </div>
     </section>
