--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SLO MEDIA LLC - Quality Products Delivered to Your Door</title>
+    <title>Poa Transport Inc
+ - Quality Products Delivered to Your Door</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="logo">
-                <h1>SLO MEDIA LLC</h1>
+                <h1>Poa Transport Inc</h1>
             </div>
             <nav>
                 <ul>
@@ -94,7 +95,7 @@
             <div class="footer-content">
                 <div class="footer-section about">
                     <h3>About Us</h3>
-                    <p>SLO MEDIA LLC is your trusted SLO MEDIA LLC platform, offering quality products from around the world.</p>
+                    <p>Poa Transport Inc is your trusted Poa Transport Inc platform, offering quality products from around the world.</p>
                     <div class="social">
                         <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -128,7 +129,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 SLO MEDIA LLC. All rights reserved.</p>
+                <p>&copy; 2025 Poa Transport Inc. All rights reserved.</p>
             </div>
         </div>
     </footer>
